wmctrl -a unnecessarily changes workspaces for windows that are on all workspaces
Affected version
- OS: Debian GNU/Linux
- Gnome: 41.3
- Does this issue appear in XOrg and/or Wayland: X11
Bug summary
wmctrl -a "Chat"
changes which workspace I'm on even if that window is set to "on all workspaces."
Steps to reproduce
For this example I'll use a window named "Chat" and I'll start with it on Desktop #1.
- Be on Workspace #1 with the Chat window only on Workspace #1.
- Set the window to "on all workspaces."
- Verify that regardless of which workspace you're on, the Chat window is there.
- There's no indication of this (until later in 'What happened') but Workspace #1 is window's "home".
- Switch to any other workspace; e.g., Workspace #2.
- Run
wmctrl -a "Chat"
.
What happened
In addition to the "Chat" window being activated, my workspace is changed to "Chat's" home workspace, Workspace #1.
What did you expect to happen
I expected the Chat window to be activated without my workspace being changed.
Notes:
- Running
wmctrl -a
while on the window's home workspace works as expected (no workspace change) - Using
wmctrl -R
instead causes the window to lose its "on all workspaces" state - The Cinnamon desktop environment behaves as expected.
Relevant logs, screenshots, screencasts etc.
none
Edited by Robert LaThanh